octo-cluster/cluster/apps/home-assistant/zigbee2mqtt/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
  labels:
    app: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:2.12.1
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: zigbee2mqtt-data
              mountPath: /data
            - name: zigbee2mqtt-udev
              mountPath: /run/udev
            - name: ttyacm
              mountPath: /dev/ttyACM0
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
        - name: zigbee2mqtt-udev
          hostPath:
            path: /run/udev
        - name: ttyacm
          hostPath:
            path: /dev/ttyACM0
      nodeSelector:
        zigbee: "true"
